[gd_scene load_steps=7 format=3 uid="uid://b0ylnctdwoh6a"]

[ext_resource type="Script" path="res://Scripts/UI/menu.gd" id="1_ui65l"]
[ext_resource type="Theme" uid="uid://vx3npjiwp4mu" path="res://Themes/MainMenu.tres" id="2_nvto7"]
[ext_resource type="Texture2D" uid="uid://csix2kcct2nsv" path="res://meta/mainmenu.jpg" id="3_eq3r1"]
[ext_resource type="FontFile" uid="uid://cmgfklorvqr48" path="res://Fonts/Timmy-Regular.otf" id="3_syyht"]
[ext_resource type="PackedScene" uid="uid://73ybu1u23xav" path="res://Scenes/UI/settings_menu.tscn" id="5_mibca"]

[sub_resource type="Texture2D" id="Texture2D_3de12"]
resource_local_to_scene = false
resource_name = ""

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ui65l")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_nvto7")

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
layout_mode = 0
offset_left = -234.0
offset_top = -45.0
offset_right = 2033.0
offset_bottom = 1095.0
texture = ExtResource("3_eq3r1")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 54.0
offset_top = 569.0
offset_right = 354.0
offset_bottom = 951.0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Continue" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../NewGame")
theme_override_fonts/font = ExtResource("3_syyht")
theme_override_font_sizes/font_size = 60
text = "Reprendre"
alignment = 0

[node name="NewGame" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Continue")
focus_neighbor_bottom = NodePath("../Options")
theme_override_fonts/font = ExtResource("3_syyht")
theme_override_font_sizes/font_size = 60
text = "Nouvelle partie"
alignment = 0

[node name="Options" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../NewGame")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_fonts/font = ExtResource("3_syyht")
theme_override_font_sizes/font_size = 60
text = "Options"
alignment = 0

[node name="Quit" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Continue")
theme_override_fonts/font = ExtResource("3_syyht")
theme_override_font_sizes/font_size = 60
text = "Quitter"
alignment = 0

[node name="PauseOverlay" type="TextureRect" parent="MainMenu"]
visible = false
modulate = Color(0.603922, 0.603922, 0.603922, 0.0862745)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("Texture2D_3de12")

[node name="Settings" parent="." instance=ExtResource("5_mibca")]
visible = false
layout_mode = 1
